@@ -8,8 +8,6 @@ import android.content.DialogInterface;
 import android.content.SharedPreferences;
 import android.os.Build;
 import android.os.Bundle;
-import android.text.Editable;
-import android.text.TextWatcher;
 import android.util.Log;
 import android.view.LayoutInflater;
 import android.view.View;
@@ -85,12 +83,20 @@ public class AppSetUpDialog extends DialogFragment {
         final Spinner hmiLangSpinner = (Spinner) view.findViewById(R.id.selectprotocol_hmiLang);
         final RadioGroup transportGroup = (RadioGroup) view.findViewById(
                 R.id.selectprotocol_radioGroupTransport);
-        final EditText ipAddressEditText = (EditText) view.findViewById(R.id.selectprotocol_ipAddr);
+        final EditText ipAddressEditText = (EditText) view.findViewById(R.id.select_protocol_ip_address_edit_view);
         final EditText tcpPortEditText = (EditText) view.findViewById(R.id.selectprotocol_tcpPort);
         final LinearLayout nsdUseLayout = (LinearLayout) view.findViewById(R.id.nsd_use_layout);
         final LinearLayout ipAddressLayout = (LinearLayout) view.findViewById(R.id.ip_address_layout);
         final LinearLayout portLayout = (LinearLayout) view.findViewById(R.id.port_layout);
-        final ToggleButton mNSDUseToggle = (ToggleButton) view.findViewById(R.id.nsd_toggle_btn);
+        final ToggleButton nsdToggle = (ToggleButton) view.findViewById(R.id.nsd_toggle_btn);
+        nsdToggle.setOnCheckedChangeListener(new CompoundButton.OnCheckedChangeListener() {
+            @Override
+            public void onCheckedChanged(CompoundButton buttonView, boolean isChecked) {
+                ipAddressEditText.setEnabled(!isChecked);
+                TextView ipAddressView = (TextView) view.findViewById(R.id.select_protocol_ip_address_view);
+                ipAddressView.setEnabled(!isChecked);
+            }
+        });
 
         final boolean mIsNSDSupported = Build.VERSION.SDK_INT >= Const.JELLYBEAN_API_LEVEL;
 
@@ -194,7 +200,7 @@ public class AppSetUpDialog extends DialogFragment {
         hmiLangSpinner.setSelection(langAdapter.getPosition(hmiLang));
         ipAddressEditText.setText(ipAddress);
         tcpPortEditText.setText(String.valueOf(tcpPort));
-        mNSDUseToggle.setChecked(prefs.getBoolean(Const.Transport.PREFS_KEY_IS_NSD, false));
+        nsdToggle.setChecked(prefs.getBoolean(Const.Transport.PREFS_KEY_IS_NSD, false));
         autoSetAppIconCheckBox.setChecked(autoSetAppIcon);
 
         int groupCheck = R.id.selectprotocol_radioUSB;
@@ -236,7 +242,7 @@ public class AppSetUpDialog extends DialogFragment {
                         String ipAddress = ipAddressEditText.getText().toString();
                         int tcpPort = Integer.parseInt(tcpPortEditText.getText().toString());
                         boolean autoSetAppIcon = autoSetAppIconCheckBox.isChecked();
-                        boolean mNSDPrefValue = mIsNSDSupported && mNSDUseToggle.isChecked();
+                        boolean mNSDPrefValue = mIsNSDSupported && nsdToggle.isChecked();
                         // save the configs
                         boolean success = prefs
                                 .edit()
