@@ -213,6 +213,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/select_protocol_ip_address_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
@@ -221,7 +222,7 @@
                 android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <EditText
-                android:id="@+id/selectprotocol_ipAddr"
+                android:id="@+id/select_protocol_ip_address_edit_view"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5dp"
